--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,5 +2,6 @@
 <div style="text-align:center">
   <app-header></app-header>
   <app-projects></app-projects>
+  <router-outlet></router-outlet>
 </div>
 
