--- a/src/app/components/header/header.html
+++ b/src/app/components/header/header.html
@@ -20,16 +20,26 @@
   <p>{{content['subTitle']}}</p>
 
 </div>
-<div class="open-nav">
-  <div class="nav-text">
-    <p>strona główna</p>
-    <p>o mnie </p>
-    <p>kontakt</p>
+<div class="open-nav" [ngClass]="navBurger ? 'show' : ''" *ngIf="content">
+  <button class="hamburger hamburger--collapse dupa"
+          (click)="openBurger()" [ngClass]="navBurger ? 'is-active' : ''"
+          type="button">
+    <span class="hamburger-box">
+      <span class="hamburger-inner"></span>
+    </span>
+  </button>
+  <div class="open-nav--holder">
+    <div class="nav-text">
+      <p>{{content['mainPage']}}</p>
+      <p routerLink="about">{{content['about']}}</p>
+      <p>{{content['contact']}}</p>
+    </div>
     <div class="images">
       <img src="assets/header/fb.png" alt="facebook">
       <img src="assets/header/insta.png" alt="instagram">
       <img src="assets/header/linkedin.png" alt="linkedin">
-
     </div>
   </div>
+
+
 </div>
