--- a/src/app/pages/about/about.html
+++ b/src/app/pages/about/about.html
@@ -1,1 +1,9 @@
-<h1>Cos o patisonie</h1>
+<div class="about">
+  <img src="assets/about/me.jpg">
+  <div class="about-text">
+    <span>
+          {{content['pataInfo']}}
+
+    </span>
+  </div>
+</div>
