--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 <!--The content below is only a placeholder and can be replaced.-->
 <div style="text-align:center">
   <app-header></app-header>
-  <app-projects></app-projects>
+  <app-projects *ngIf="router.url === '/'"></app-projects>
   <router-outlet></router-outlet>
 </div>
 
