--- a/src/app/components/header/header.scss
+++ b/src/app/components/header/header.scss
@@ -29,6 +29,7 @@
     //border: 1px red dashed;
     display: flex;
     align-items: center;
+    cursor: pointer;
     img{
       max-height: 50px;
       //border: 1px blue dashed;
@@ -69,6 +70,7 @@
   display: none;
   flex-direction: column;
   align-items: flex-end;
+  z-index: 10;
   &--holder{
     display: flex;
     flex-direction: column;
@@ -88,6 +90,7 @@
   }
   .nav-text{
     text-align: right;
+    cursor: pointer;
   }
   &.show{
     display: flex;
