--- a/src/app/pages/contact/contact.html
+++ b/src/app/pages/contact/contact.html
@@ -2,7 +2,7 @@
   <div class="contact-info">
     <p>Jeśli masz jakieś pytania lub chcesz
       ze mną współpracować, skontaktuj się ze mną.</p>
-    <p>telefon: 0045 81 39 78, 531 387 751</p>
-    <p>email: patrycja.musur@gmail.com</p>
+    <p class="bold">telefon: 0045 81 39 78, 531 387 751</p>
+    <p class="bold">email: patrycja.musur@gmail.com</p>
   </div>
 </div>
