--- a/src/app/pages/project-single/project-single.html
+++ b/src/app/pages/project-single/project-single.html
@@ -1,3 +1,23 @@
 <div class="project-single">
-  <h1>yo fucker</h1>
+  <!--<h1>yo fucker</h1>-->
+  <div class="single-project">
+    <!--<div class="text" *ngIf="isLoaded">-->
+      <!--<h1>{{content[key+'Title']}}</h1>-->
+      <!--<h3 innerHTML="{{content[key+'Des']}}"></h3>-->
+      <!--{{content[key+'Des']}}-->
+    <!--</div>-->
+    <!--<div id="singleImgHolder" class="singleImgHolder">-->
+      <!--<img [src]="imgSrc" alt="project_images" *ngIf="isLoaded"-->
+           <!--[ngClass]="{'otisBook': key ==='otisBook',-->
+         <!--'mohaLogo': key === 'mohaLogo',-->
+         <!--'esportLogo': key === 'esportLogo',-->
+         <!--'pieceOfPlantLogo': key === 'pieceOfPlantLogo',-->
+         <!--'theBugLogo' : key === 'theBugLogo',-->
+         <!--'rowForWaterLogo': key === 'rowForWaterLogo',-->
+         <!--'theBugWebsite': key === 'theBugWebsite',-->
+         <!--'bookCover': key === 'bookCover',-->
+         <!--'bookyLogo': key === 'bookyLogo',-->
+         <!--'summerPosters': key === 'summerPosters' && !isMobile}">-->
+    <!--</div>-->
+  </div>
 </div>
