--- a/src/app/pages/project-single/project-single.html
+++ b/src/app/pages/project-single/project-single.html
@@ -1,11 +1,11 @@
 <div class="project-single">
-  <!--<h1>yo fucker</h1>-->
-  <div class="single-project">
+  <h1>{{key}}</h1>
     <!--<div class="text" *ngIf="isLoaded">-->
       <!--<h1>{{content[key+'Title']}}</h1>-->
       <!--<h3 innerHTML="{{content[key+'Des']}}"></h3>-->
       <!--{{content[key+'Des']}}-->
     <!--</div>-->
+  <img src="assets/projects/single/{{key}}.jpg" alt="project">
     <!--<div id="singleImgHolder" class="singleImgHolder">-->
       <!--<img [src]="imgSrc" alt="project_images" *ngIf="isLoaded"-->
            <!--[ngClass]="{'otisBook': key ==='otisBook',-->
@@ -19,5 +19,4 @@
          <!--'bookyLogo': key === 'bookyLogo',-->
          <!--'summerPosters': key === 'summerPosters' && !isMobile}">-->
     <!--</div>-->
-  </div>
 </div>
