--- a/src/app/pages/project-single/project-single.html
+++ b/src/app/pages/project-single/project-single.html
@@ -1,6 +1,9 @@
 <div class="project-single">
-  <h1>{{key}}</h1>
-    <!--<div class="text" *ngIf="isLoaded">-->
+  <h1>{{content[key + 'Header']}}</h1>
+  <p>{{content[key + 'Des']}}</p>
+  <p>{{content[key + 'Credits']}}</p>
+
+  <!--<div class="text" *ngIf="isLoaded">-->
       <!--<h1>{{content[key+'Title']}}</h1>-->
       <!--<h3 innerHTML="{{content[key+'Des']}}"></h3>-->
       <!--{{content[key+'Des']}}-->
