--- a/src/app/pages/contact/contact.html
+++ b/src/app/pages/contact/contact.html
@@ -1,8 +1,7 @@
 <div class="contact">
   <div class="contact-info">
-    <p>Jeśli masz jakieś pytania lub chcesz
-      ze mną współpracować, skontaktuj się ze mną.</p>
-    <p class="bold">telefon: 0045 81 39 78, 531 387 751</p>
-    <p class="bold">email: patrycja.musur@gmail.com</p>
+    <p>{{content['contactInfo']}}</p>
+    <p class="bold">{{content['contactPhone']}}1</p>
+    <p class="bold">{{content['contactEmail']}}</p>
   </div>
 </div>
