--- a/src/app/components/header/header.html
+++ b/src/app/components/header/header.html
@@ -1,12 +1,12 @@
 <div class="header">
-  <div class="logo" routerLink="/">
+  <div class="logo" routerLink="/" (click)="goHome()">
     <img src="../../../assets/header/logo.png">
   </div>
   <div class="language-burger">
     <div class="languages">
       <p (click)="setLanguage('en')" class="en">en</p> <span class="line">|</span> <p (click)="setLanguage('pl')" class="pl">pl</p>
     </div>
-    <button class="hamburger hamburger--collapse dupa"
+    <button class="hamburger hamburger--collapse"
             (click)="openBurger()" [ngClass]="navBurger ? 'is-active' : ''"
             type="button">
     <span class="hamburger-box">
@@ -15,13 +15,13 @@
     </button>
   </div>
 </div>
-<div class="header-text" *ngIf="content">
+<div class="header-text" *ngIf="content && router.url === '/' || !isMobile">
   <p>{{content['title']}}</p>
-  <p>{{content['subTitle']}}</p>
+  <!--<p>{{content['subTitle']}}</p>-->
 
 </div>
 <div class="open-nav" [ngClass]="navBurger ? 'show' : ''" *ngIf="content">
-  <button class="hamburger hamburger--collapse dupa"
+  <button class="hamburger hamburger--collapse"
           (click)="openBurger()" [ngClass]="navBurger ? 'is-active' : ''"
           type="button">
     <span class="hamburger-box">
@@ -29,15 +29,19 @@
     </span>
   </button>
   <div class="open-nav--holder">
-    <div class="nav-text">
-      <p (click)="openBurger()">{{content['mainPage']}}</p>
+    <div class="nav-text" >
+      <p (click)="openBurger()" routerLink="/">{{content['mainPage']}}</p>
       <p routerLink="about" (click)="openBurger()">{{content['about']}}</p>
       <p (click)="openBurger()" routerLink="contact" >{{content['contact']}}</p>
+      <app-sorting class="sorting"></app-sorting>
     </div>
     <div class="images">
-      <img src="assets/header/fb.png" alt="facebook" (click)="openBurger()">
-      <img src="assets/header/insta.png" alt="instagram">
-      <img src="assets/header/linkedin.png" alt="linkedin">
+      <img src="assets/header/fb.png" alt="facebook" (click)="openBurger();
+      goTo('https://www.facebook.com/patrycja.musur');">
+      <img src="assets/header/insta.png" alt="instagram" (click)="openBurger();
+       goTo('https://instagram.com/patrycjaxmusur/');">
+      <img src="assets/header/linkedin.png" alt="linkedin" (click)="openBurger();
+      goTo('https://www.linkedin.com/in/patrycjamusur');">
     </div>
   </div>
 
