--- a/src/app/pages/about/about.html
+++ b/src/app/pages/about/about.html
@@ -1,4 +1,8 @@
 <div class="about">
+  <div class="languages">
+    <p (click)="setLanguage('en')" class="en">en</p> <span class="line">|</span>
+    <p (click)="setLanguage('pl')" class="pl">pl</p>
+  </div>
   <img src="assets/about/me.jpg">
   <div class="about-text">
     <span>
