--- a/src/styles.scss
+++ b/src/styles.scss
@@ -2,12 +2,45 @@
 body{
  font-family: 'Poppins', sans-serif;
   font-weight: 300;
-  margin: 25px;
+  margin: 25px 25px 0 25px;
 }
 // remove border blue line from focus element
 *:focus {outline:none}
+*{
+  -webkit-tap-highlight-color: rgba(0,0,0,0);
+
+}
 p{
   &.bold{
     font-weight: 500;
+  }
+}
+
+
+/*********************
+BREAKPOINTS
+*********************/
+
+@mixin breakpoint($point) {
+  @if $point == desktop {
+    @media (min-width: 64em) { @content ; }
+  }
+  @else if $point == laptop {
+    @media (min-width: 64em) { @content ; }
+  }
+  @else if $point == tablet {
+    @media (min-width: 50em) { @content ; }
+  }
+  @else if $point == phablet {
+    @media (min-width: 37.5em)  { @content ; }
+  }
+  @else if $point == mobileonly {
+    @media (max-width: 37.5em)  { @content ; }
+
+  }
+}
+@include breakpoint(desktop) {
+  body{
+    margin-top: 0;
   }
 }
