--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <!--The content below is only a placeholder and can be replaced.-->
-<div style="text-align:center">
+<div class="app">
   <app-header></app-header>
   <app-projects *ngIf="router.url === '/'"></app-projects>
   <router-outlet></router-outlet>
