--- a/src/app/components/projects/projects.html
+++ b/src/app/components/projects/projects.html
@@ -1,68 +1,117 @@
 <div class="project-holder">
-  <app-sorting (filterEvent)="receiveMessage($event)"></app-sorting>
-  <!--concet-->
-  <img src="../../../assets/projects/&learning.jpg"
-       alt="andl" *ngIf="filter === 'concept' || filter === 'any'"
-       [routerLink]="['/project/&learning']">
-  <!--concept-->
-  <img src="../../../assets/projects/arla.jpg"
-       alt="arla" *ngIf="filter === 'concept' || filter === 'any'"
-       [routerLink]="['/project/arla']">
-  <!--print-->
-  <img src="../../../assets/projects/book.jpg"
-       alt="book" *ngIf="filter === 'print' || filter === 'any'"
-       [routerLink]="['/project/book']">
-  <!--web design-->
-  <img src="../../../assets/projects/booky.jpg"
-       alt="booky" *ngIf="filter === 'web' || filter === 'any'"
-       [routerLink]="['/project/booky']">
-  <!--concept-->
-  <img src="../../../assets/projects/edc.jpg"
-       alt="edc" *ngIf="filter === 'concept' || filter === 'any'"
-       [routerLink]="['/project/edc']">
-  <!--logo-->
-  <img src="../../../assets/projects/logos.jpg"
-       alt="fronts" *ngIf="filter === 'logo' || filter === 'any'"
-       [routerLink]="['/project/logos']">
-  <!--conpetc-->
-  <img src="../../../assets/projects/gajol.jpg"
-       alt="gajol" *ngIf="filter === 'concept' || filter === 'any'"
-       [routerLink]="['/project/gajol']"  >
-  <!--ux-->
-  <img src="../../../assets/projects/imread.jpg"
-       alt="imread" *ngIf="filter === 'ux' || filter === 'any'"
-       [routerLink]="['/project/imread']">
-  <!--visual identity-->
-  <img src="../../../assets/projects/moha.jpg"
-       alt="moha" *ngIf="filter === 'visual' || filter === 'any'"
-       [routerLink]="['/project/moha']">
-  <!--print-->
-  <img src="../../../assets/projects/otis.jpg"
-       alt="otis" *ngIf="filter === 'print' || filter === 'any'"
-       [routerLink]="['/project/otis']">
-  <!--web desing-->
-  <img src="../../../assets/projects/pop.jpg"
-       alt="pop" *ngIf="filter === 'web' || filter === 'any'"
-       [routerLink]="['/project/pop']">
-  <!--print-->
-  <img src="../../../assets/projects/poster-challenge.jpg"
-       alt=posterChallenge *ngIf="filter === 'print' || filter === 'any'"
-       [routerLink]="['/project/poster-challenge']">
-  <!--conpect-->
-  <img src="../../../assets/projects/spotify.jpg"
-       alt="spotify" *ngIf="filter === 'concept' || filter === 'any'"
-       [routerLink]="['/project/spotify']">
-  <!--games-->
-  <img src="../../../assets/projects/stp.jpg"
-       alt="stp" *ngIf="filter === 'concept' || filter === 'any'"
-       [routerLink]="['/project/stp']">
-  <!--visal identity-->
-  <img src="../../../assets/projects/tattoo.jpg"
-       alt="tattoo" *ngIf="filter === 'visual' || filter === 'any'"
-       [routerLink]="['/project/tattoo']">
-  <!--games-->
-  <img src="../../../assets/projects/valentines.jpg"
-       alt="valentines" *ngIf="filter === 'games' || filter === 'any'"
-       [routerLink]="['/project/valentines']">
+  <div class="languages">
+    <p (click)="setLanguage('en')" class="en">en</p> <span class="line">|</span>
+    <p (click)="setLanguage('pl')" class="pl">pl</p>
+  </div>
+
+  <app-sorting (filterEvent)="receiveMessage($event)" class="sorting"></app-sorting>
+  <div class="img-holder">
+    <div class="img-holder--inner">
+      <div class="img-holder--inner-inner even first">
+        <!--concet-->
+        <img src="../../../assets/projects/&learning.jpg"
+             alt="andl" *ngIf="filter === 'concept' || filter === 'any'"
+             [routerLink]="['/project/&learning']">
+      </div>
+
+    </div>
+    <div class="img-holder--inner">
+      <div class="img-holder--inner-inner odd second">
+      <!--concept-->
+      <img src="../../../assets/projects/arla.jpg"
+           alt="arla" *ngIf="filter === 'concept' || filter === 'any'"
+           [routerLink]="['/project/arla']"></div>
+    </div>
+    <div class="img-holder--inner">   <!--print-->
+      <div class="img-holder--inner-inner even">
+      <img src="../../../assets/projects/book.jpg"
+           alt="book" *ngIf="filter === 'print' || filter === 'any'"
+           [routerLink]="['/project/book']"></div>
+    </div>
+    <div class="img-holder--inner">    <!--web design-->
+      <div class="img-holder--inner-inner odd" >
+      <img src="../../../assets/projects/booky.jpg"
+           alt="booky" *ngIf="filter === 'webDesign' || filter === 'any'"
+           [routerLink]="['/project/booky']"></div>
+    </div>
+    <div class="img-holder--inner">    <!--concept-->
+      <div class="img-holder--inner-inner even">
+      <img src="../../../assets/projects/edc.jpg"
+           alt="edc" *ngIf="filter === 'concept' || filter === 'any'"
+           [routerLink]="['/project/edc']"></div>
+    </div>
+    <div class="img-holder--inner"> <!--logo-->
+      <div class="img-holder--inner-inner odd">
+      <img src="../../../assets/projects/logos.jpg"
+           alt="fronts" *ngIf="filter === 'logo' || filter === 'any'"
+           [routerLink]="['/project/logos']"></div>
+    </div>
+    <div class="img-holder--inner">  <!--conpetc-->
+      <div class="img-holder--inner-inner even" >
+      <img src="../../../assets/projects/gajol.jpg"
+           alt="gajol" *ngIf="filter === 'concept' || filter === 'any'"
+           [routerLink]="['/project/gajol']"></div>
+    </div>
+    <div class="img-holder--inner">   <!--ux-->
+      <div class="img-holder--inner-inner odd">
+      <img src="../../../assets/projects/imread.jpg"
+           alt="imread" *ngIf="filter === 'concept' || filter === 'any'"
+           [routerLink]="['/project/imread']"></div>
+    </div>
+    <div class="img-holder--inner"> <!--visual identity-->
+      <div class="img-holder--inner-inner even">
+      <img src="../../../assets/projects/moha.jpg"
+           alt="moha" *ngIf="filter === 'visual' || filter === 'any'"
+           [routerLink]="['/project/moha']"></div>
+    </div>
+    <div class="img-holder--inner">    <!--print-->
+      <div class="img-holder--inner-inner odd">
+      <img src="../../../assets/projects/otis.jpg"
+           alt="otis" *ngIf="filter === 'print' || filter === 'any'"
+           [routerLink]="['/project/otis']"></div>
+
+    </div>
+    <div class="img-holder--inner"><!--web desing-->
+      <div class="img-holder--inner-inner even">
+      <img src="../../../assets/projects/pop.jpg"
+           alt="pop" *ngIf="filter === 'webDesign' || filter === 'any'"
+           [routerLink]="['/project/pop']"></div>
+    </div>
+    <div class="img-holder--inner"> <!--print-->
+      <div class="img-holder--inner-inner odd">
+      <img src="../../../assets/projects/poster-challenge.jpg"
+           alt=posterChallenge *ngIf="filter === 'print' || filter === 'any'"
+           [routerLink]="['/project/poster-challenge']"></div>
+    </div>
+    <div class="img-holder--inner">   <!--conpect-->
+      <div class="img-holder--inner-inner even">
+      <img src="../../../assets/projects/spotify.jpg"
+           alt="spotify" *ngIf="filter === 'concept' || filter === 'any'"
+           [routerLink]="['/project/spotify']"></div>
+    </div>
+    <div class="img-holder--inner">
+      <div class="img-holder--inner-inner odd">
+      <!--games-->
+      <img src="../../../assets/projects/stp.jpg"
+           alt="stp" *ngIf="filter === 'games' || filter === 'any'"
+           [routerLink]="['/project/stp']"></div>
+    </div>
+    <div class="img-holder--inner">   <!--visal identity-->
+      <div class="img-holder--inner-inner even">
+      <img src="../../../assets/projects/tattoo.jpg"
+           alt="tattoo" *ngIf="filter === 'visual' || filter === 'any'"
+           [routerLink]="['/project/tattoo']"></div>
+    </div>
+
+    <div class="img-holder--inner">   <!--games-->
+      <div class="img-holder--inner-inner odd">
+      <img src="../../../assets/projects/valentines.jpg"
+           alt="valentines" *ngIf="filter === 'games' || filter === 'any'"
+           [routerLink]="['/project/valentines']"></div>
+    </div>
+
+
+  </div>
+
 
 </div>
