--- a/src/app/pages/contact/contact.html
+++ b/src/app/pages/contact/contact.html
@@ -1,8 +1,15 @@
 <div class="contact">
+  <div class="languages">
+    <p (click)="setLanguage('en')" class="en">en</p> <span class="line">|</span>
+    <p (click)="setLanguage('pl')" class="pl">pl</p>
+  </div>
+
   <div class="contact-info">
-    <p>Jeśli masz jakieś pytania lub chcesz
-      ze mną współpracować, skontaktuj się ze mną.</p>
-    <p class="bold">telefon: 0045 81 39 78, 531 387 751</p>
-    <p class="bold">email: patrycja.musur@gmail.com</p>
+    <p>{{content['contactInfo']}}</p>
+    <div class="details">
+      <p class="bold">{{content['contactPhone']}}</p>
+      <p class="bold">{{content['contactEmail']}}</p>
+    </div>
+
   </div>
 </div>
