--- a/src/app/pages/project-single/project-single.scss
+++ b/src/app/pages/project-single/project-single.scss
@@ -1,5 +1,95 @@
+@import "../../../styles";
+
 .project-single{
-  img{
-    max-width: 100%;
+  .languages{
+    display: none;
+  }
+  iframe{
+    margin-top: 20px;
+    &.desktop{
+      display: none;
+    }
+  }
+  h1{
+    font-size: 0.9rem;
+    margin-top: 30px;
+    margin-bottom: 0;
+  }
+  a:-webkit-any-link{
+    text-decoration: none;
+  }
+  .description{
+    margin-top: 10px;
+    font-size: 0.8rem;
+    margin-bottom: 0;
+
+  }
+  .img-holder{
+    position: relative;
+    .arrow{
+      position: absolute;
+      bottom: 20px;
+      cursor: pointer;
+      max-width: 25px;
+      transform: rotate(90deg);
+      right: 0;
+
+    }
+    img{
+      //border: 1px solid blue;
+      //max-width: 100%;
+      display: block;
+      max-width: 100vw;
+      margin-left: -25px;
+      margin-top: 20px;
+    }
+  }
+
+  .credits{
+    font-size: 0.5rem;
+    //margin-top: -20px;
+  }
+}
+@include breakpoint(desktop) {
+  .project-single{
+    margin-top: -20px;
+    .languages{
+      position: absolute;
+      display: flex;
+      cursor: pointer;
+      //border: 1px solid red;
+      align-items: center;
+      width: 43px;
+      justify-content: space-between;
+      //margin-right: 20px;
+      font-size: 0.9rem;
+      right: 0;
+      top: 0;
+      p{
+        &:hover{
+          font-weight: 500;
+        }
+      }
+    }
+    h1{
+      margin-top: 118px;
+    }
+    iframe{
+      &.mobile{
+        display: none;
+      }
+      &.desktop{
+        display: block;
+      }
+    }
+    .img-holder{
+      .arrow{
+        right: 10px;
+      }
+        img{
+        margin-left: 0px;
+        max-width: 100%;
+      }
+    }
   }
 }
