--- a/src/app/components/projects/projects.html
+++ b/src/app/components/projects/projects.html
@@ -4,109 +4,109 @@
     <p (click)="setLanguage('pl')" class="pl">pl</p>
   </div>
 
-  <app-sorting (filterEvent)="receiveMessage($event)" class="sorting"></app-sorting>
+  <app-sorting (filtert)="receiveMessage($t)" class="sorting"></app-sorting>
   <div class="img-holder">
-    <div class="img-holder--inner">
-      <div class="img-holder--inner-inner even first">
+    <div class="img-holder--inner" *ngIf="filter === 'concept' || filter === 'any'">
+      <div class="img-holder--inner-inner  first">
         <!--concet-->
         <img src="../../../assets/projects/&learning.jpg"
-             alt="andl" *ngIf="filter === 'concept' || filter === 'any'"
+             alt="andl"
              [routerLink]="['/project/&learning']">
       </div>
 
     </div>
-    <div class="img-holder--inner">
+    <div class="img-holder--inner" *ngIf="filter === 'concept' || filter === 'any'">
       <div class="img-holder--inner-inner odd second">
       <!--concept-->
       <img src="../../../assets/projects/arla.jpg"
-           alt="arla" *ngIf="filter === 'concept' || filter === 'any'"
+           alt="arla"
            [routerLink]="['/project/arla']"></div>
     </div>
-    <div class="img-holder--inner">   <!--print-->
-      <div class="img-holder--inner-inner even">
+    <div class="img-holder--inner" *ngIf="filter === 'print' || filter === 'any'">   <!--print-->
+      <div class="img-holder--inner-inner ">
       <img src="../../../assets/projects/book.jpg"
-           alt="book" *ngIf="filter === 'print' || filter === 'any'"
+           alt="book"
            [routerLink]="['/project/book']"></div>
     </div>
-    <div class="img-holder--inner">    <!--web design-->
+    <div class="img-holder--inner" *ngIf="filter === 'webDesign' || filter === 'any'">    <!--web design-->
       <div class="img-holder--inner-inner odd" >
       <img src="../../../assets/projects/booky.jpg"
-           alt="booky" *ngIf="filter === 'webDesign' || filter === 'any'"
+           alt="booky"
            [routerLink]="['/project/booky']"></div>
     </div>
-    <div class="img-holder--inner">    <!--concept-->
-      <div class="img-holder--inner-inner even">
+    <div class="img-holder--inner" *ngIf="filter === 'concept' || filter === 'any'">    <!--concept-->
+      <div class="img-holder--inner-inner ">
       <img src="../../../assets/projects/edc.jpg"
-           alt="edc" *ngIf="filter === 'concept' || filter === 'any'"
+           alt="edc"
            [routerLink]="['/project/edc']"></div>
     </div>
-    <div class="img-holder--inner"> <!--logo-->
+    <div class="img-holder--inner" *ngIf="filter === 'logo' || filter === 'any'"> <!--logo-->
       <div class="img-holder--inner-inner odd">
       <img src="../../../assets/projects/logos.jpg"
-           alt="fronts" *ngIf="filter === 'logo' || filter === 'any'"
+           alt="fronts"
            [routerLink]="['/project/logos']"></div>
     </div>
-    <div class="img-holder--inner">  <!--conpetc-->
-      <div class="img-holder--inner-inner even" >
+    <div class="img-holder--inner" *ngIf="filter === 'concept' || filter === 'any'">  <!--conpetc-->
+      <div class="img-holder--inner-inner " >
       <img src="../../../assets/projects/gajol.jpg"
-           alt="gajol" *ngIf="filter === 'concept' || filter === 'any'"
+           alt="gajol"
            [routerLink]="['/project/gajol']"></div>
     </div>
-    <div class="img-holder--inner">   <!--ux-->
+    <div class="img-holder--inner" *ngIf="filter === 'concept' || filter === 'any'">   <!--ux-->
       <div class="img-holder--inner-inner odd">
       <img src="../../../assets/projects/imread.jpg"
-           alt="imread" *ngIf="filter === 'concept' || filter === 'any'"
+           alt="imread"
            [routerLink]="['/project/imread']"></div>
     </div>
-    <div class="img-holder--inner"> <!--visual identity-->
-      <div class="img-holder--inner-inner even">
+    <div class="img-holder--inner" *ngIf="filter === 'visual' || filter === 'any'"> <!--visual identity-->
+      <div class="img-holder--inner-inner ">
       <img src="../../../assets/projects/moha.jpg"
-           alt="moha" *ngIf="filter === 'visual' || filter === 'any'"
+           alt="moha"
            [routerLink]="['/project/moha']"></div>
     </div>
-    <div class="img-holder--inner">    <!--print-->
+    <div class="img-holder--inner" *ngIf="filter === 'print' || filter === 'any'">    <!--print-->
       <div class="img-holder--inner-inner odd">
       <img src="../../../assets/projects/otis.jpg"
-           alt="otis" *ngIf="filter === 'print' || filter === 'any'"
+           alt="otis"
            [routerLink]="['/project/otis']"></div>
 
     </div>
-    <div class="img-holder--inner"><!--web desing-->
-      <div class="img-holder--inner-inner even">
+    <div class="img-holder--inner" *ngIf="filter === 'webDesign' || filter === 'any'"><!--web desing-->
+      <div class="img-holder--inner-inner ">
       <img src="../../../assets/projects/pop.jpg"
-           alt="pop" *ngIf="filter === 'webDesign' || filter === 'any'"
+           alt="pop"
            [routerLink]="['/project/pop']"></div>
     </div>
-    <div class="img-holder--inner"> <!--print-->
+    <div class="img-holder--inner" *ngIf="filter === 'print' || filter === 'any'"> <!--print-->
       <div class="img-holder--inner-inner odd">
       <img src="../../../assets/projects/poster-challenge.jpg"
-           alt=posterChallenge *ngIf="filter === 'print' || filter === 'any'"
+           alt=posterChallenge
            [routerLink]="['/project/poster-challenge']"></div>
     </div>
-    <div class="img-holder--inner">   <!--conpect-->
-      <div class="img-holder--inner-inner even">
+    <div class="img-holder--inner" *ngIf="filter === 'concept' || filter === 'any'">   <!--conpect-->
+      <div class="img-holder--inner-inner ">
       <img src="../../../assets/projects/spotify.jpg"
-           alt="spotify" *ngIf="filter === 'concept' || filter === 'any'"
+           alt="spotify"
            [routerLink]="['/project/spotify']"></div>
     </div>
-    <div class="img-holder--inner">
+    <div class="img-holder--inner" *ngIf="filter === 'games' || filter === 'any'">
       <div class="img-holder--inner-inner odd">
       <!--games-->
       <img src="../../../assets/projects/stp.jpg"
-           alt="stp" *ngIf="filter === 'games' || filter === 'any'"
+           alt="stp"
            [routerLink]="['/project/stp']"></div>
     </div>
-    <div class="img-holder--inner">   <!--visal identity-->
-      <div class="img-holder--inner-inner even">
+    <div class="img-holder--inner" *ngIf="filter === 'visual' || filter === 'any'">   <!--visal identity-->
+      <div class="img-holder--inner-inner ">
       <img src="../../../assets/projects/tattoo.jpg"
-           alt="tattoo" *ngIf="filter === 'visual' || filter === 'any'"
+           alt="tattoo"
            [routerLink]="['/project/tattoo']"></div>
     </div>
 
-    <div class="img-holder--inner">   <!--games-->
+    <div class="img-holder--inner" *ngIf="filter === 'games' || filter === 'any'">   <!--games-->
       <div class="img-holder--inner-inner odd">
       <img src="../../../assets/projects/valentines.jpg"
-           alt="valentines" *ngIf="filter === 'games' || filter === 'any'"
+           alt="valentines"
            [routerLink]="['/project/valentines']"></div>
     </div>
 
